--- a/game/templates/blog.html
+++ b/game/templates/blog.html
@@ -1,6 +1,6 @@
 {%  extends "base.html" %}
 
-{% block subtitle %}blog{% endblock %}
+{% block title %}optyjaciel | blog{% endblock %}
 
 {%  block content %}
 
