--- a/game/templates/game_match.html
+++ b/game/templates/game_match.html
@@ -4,7 +4,7 @@
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/match.css' %}">
 {% endblock %}
-{% block subtitle %}aktualna runda | wynik{% endblock %}
+{% block title %}optyjaciel | aktualna runda | wynik{% endblock %}
 
 {%  block content %}
     <div class="information">
