--- a/game/templates/login.html
+++ b/game/templates/login.html
@@ -1,6 +1,6 @@
 {%  extends "join.html" %}
 
-{% block subtitle %}zaloguj się{% endblock %}
+{% block title %}optyjaciel | zaloguj się{% endblock %}
 
 {% block content %}
 
