--- a/game/templates/message_read.html
+++ b/game/templates/message_read.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'css/message.css' %}">
 {% endblock %}
 
-{% block subtitle %}czytaj wiadomość{% endblock %}
+{% block title %}optyjaciel | czytaj wiadomość{% endblock %}
 
 {%  block content %}
     <div class="box">
