--- a/game/templates/post.html
+++ b/game/templates/post.html
@@ -1,6 +1,6 @@
 {%  extends "base.html" %}
 
-{% block subtitle %}{{ post.title }}{% endblock %}
+{% block title %}{{ post.title }}{% endblock %}
 
 {%  block content %}
     <div class="box high-line" style="line-height: 200%;">
