--- a/game/templates/register.html
+++ b/game/templates/register.html
@@ -1,6 +1,6 @@
 {%  extends "join.html" %}
 
-{% block subtitle %}zarejestruj się{% endblock %}
+{% block title %}optyjaciel | zarejestruj się{% endblock %}
 
 {% block content %}
 
