--- a/game/templates/rules.html
+++ b/game/templates/rules.html
@@ -7,7 +7,7 @@
 
 {%  block content %}
     <div class="box high-line">
-        <span class="qa">Na czym polega gra?</span>
+        <h2 class="qa">Na czym polega gra?</h2>
         <p>W każdej rundzie wszyscy gracze odpowiadają na 10 takich samych pytań.
             Następnie gracze są dobierani w pary tak, aby uzyskać jak najwięcej punktów <strong>dla całej grupy graczy</strong>.
             Dobraną parę nazywamy <strong>optyjaciółmi</strong>.
@@ -28,7 +28,7 @@
     </div>
 
     <div class="box high-line">
-        <span class="qa">Jak dobierani są optyjaciele?</span>
+        <h2 class="qa">Jak dobierani są optyjaciele?</h2>
         <img src="{% static 'img/diagram.png' %}" alt="Przykładowe wyniki z rundy">
         <p>Optyjaciele są łączeni w pary tak, aby uzyskać jak najwięcej punktów wśród wszystkich grających.
             Punkt jest przyznawany zawsze wtedy, gdy dwie osoby odpowiedzą tak samo na pytanie.</p>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="box high-line">
-        <span class="qa">Jakie jest prawdopodobieństwo uzyskania 10 punktów?</span>
+        <h2 class="qa">Jakie jest prawdopodobieństwo uzyskania 10 punktów?</h2>
         <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1 do 4.</p>
 
         <p>W przypadku dwóch pytań, prawdopobieństwo odpowiedzi na obydwa tak samo wynosi 1 do 16.</p>
