--- a/game/templates/thanks.html
+++ b/game/templates/thanks.html
@@ -1,10 +1,10 @@
 {%  extends "base.html" %}
 
-{% block subtitle %}dziękuję{% endblock %}
+{% block title %}optyjaciel | dziękuję{% endblock %}
 
 {%  block content %}
     <div class="box">
-        <h1>Dziękuję!</h1>
-        <h2>Twoja wiadomość została wysłana.</h2>
+        <h2>Dziękuję!</h2>
+        <h3>Twoja wiadomość została wysłana.</h3>
     </div>
 {% endblock %}
