--- a/game/templates/message_inbox.html
+++ b/game/templates/message_inbox.html
@@ -5,19 +5,20 @@
     <link rel="stylesheet" href="{% static 'css/message.css' %}">
 {% endblock %}
 
-{% block subtitle %}wiadomości odebrane{% endblock %}
+{% block title %}optyjaciel | wiadomości odebrane{% endblock %}
 
 {%  block content %}
     <div class="box">
         <a style="display: block;" href="{% url "message-write" %}">
             <div style="display: flex; align-items: center; gap: 4px;">
-                <i class="material-icons" style="font-size: 2em; color: green;">add_circle</i> Nowa wiadomość
+                <i class="material-icons" style="font-size: 2em; color: green;">add_circle</i>
+                <h2 style="font-size: inherit; margin: 0">Nowa wiadomość</h2>
             </div>
         </a>
 
         <div class="in-out">
-            <a class="in in_or_out">odebrane</a>
-            <a class="out" href="{% url "message-outbox" %}">wysłane</a>
+            <a class="in in_or_out"><h2 style="font-size: inherit; margin: 0">odebrane</h2></a>
+            <a class="out" href="{% url "message-outbox" %}"><h2 style="font-size: inherit; margin: 0">wysłane</h2></a>
         </div>
 
         <div class="table">
