--- a/game/templates/message_outbox.html
+++ b/game/templates/message_outbox.html
@@ -5,13 +5,14 @@
     <link rel="stylesheet" href="{% static 'css/message.css' %}">
 {% endblock %}
 
-{% block subtitle %}wiadomości wysłane{% endblock %}
+{% block title %}optyjaciel | wiadomości wysłane{% endblock %}
 
 {%  block content %}
     <div class="box">
         <a style="display: block;" href="{% url "message-write" %}">
             <div style="display: flex; align-items: center; gap: 4px;">
-                <i class="material-icons" style="font-size: 2em; color: green;">add_circle</i> Nowa wiadomość
+                <i class="material-icons" style="font-size: 2em; color: green;">add_circle</i>
+                <h2 style="font-size: inherit; margin: 0">Nowa wiadomość</h2>
             </div>
         </a>
 
