--- a/game/templates/message_write.html
+++ b/game/templates/message_write.html
@@ -1,10 +1,6 @@
 {%  extends "base.html" %}
 
-{% load static %}
-{% block head %}
-{% endblock %}
-
-{% block subtitle %}napisz wiadomość{% endblock %}
+{% block title %}optyjaciel | napisz wiadomość{% endblock %}
 
 {%  block content %}
     <div class="box">
