--- a/game/templates/blog.html
+++ b/game/templates/blog.html
@@ -8,7 +8,9 @@
         <div class="box">
             <h2 style="font-size: 1em;">{{ post.title|safe }}</h2>
             <p>{{ post.date|date:'Y-m-d' }}</p>
-            <h3 style="font-size: 1em; font-weight: normal;">{{ post.header|safe }}</h3>
+            <h3 style="font-size: 1em; font-weight: normal; line-height: 200%; text-align: justify">
+                {{ post.header|safe }}
+            </h3>
             <div class="vertical-center"><a href="{% url "post" post.slug %}">czytaj więcej</a></div>
         </div>
     {% endfor %}
