--- a/game/templates/post.html
+++ b/game/templates/post.html
@@ -3,10 +3,12 @@
 {% block title %}{{ post.title }}{% endblock %}
 
 {%  block content %}
-    <div class="box post">
-        <h1 style="">{{ post.title }}</h1>
-        <p>{{ post.date|date:'Y-m-d' }}</p>
-        <h2>{{ post.header|safe }}</h2>
-        <h3>{{ post.content|safe }}</h3>
+    <div class="box">
+        <div class="post">
+            <h1 style="">{{ post.title }}</h1>
+            <p>{{ post.date|date:'Y-m-d' }}</p>
+            <div class="post-header">{{ post.header|safe }}</div>
+            <div class="post-content">{{ post.content|safe }}</div>
+        </div>
     </div>
 {% endblock %}
