--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Optyjaciel to internetowa gra towarzyska, w której możesz poznać nowych
     znajomych i przyjaciół. W grze zostaniesz dobrany w parę na podstawie Twoich zainteresowań i preferencji.">
-    <meta name="keywords" content="przyjaciel, przyjaciółka, przyjaciele, kolega, koleżanka, koledzy, koleżanki,
-    znajomy, znajoma, znajomi, poznawanie nowych osób, poznawanie nowych ludzi, gra, gra towarzyska, zabawa,
-    portal społecznościowy">
+    <meta name="keywords" content="przyjaciel, przyjaciółka, przyjaciele, przyjaźń,
+    kolega, koleżanka, koledzy, koleżanki, znajomy, znajoma, znajomi, poznawanie nowych osób, poznawanie nowych ludzi,
+    gra, gra towarzyska, zabawa, portal społecznościowy">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu">
@@ -28,7 +28,9 @@
                 {% endif %}
             </div>
         </div>
-        <h1 class="logo">optyjaciel</h1>
+
+        <div class="vertical-center" style="margin: 36px 0 36px 0;"><span class="logo">optyjaciel</span></div>
+
         <div class="container">
             <div class="menu">
                 <ul>
