--- a/game/templates/blog/blog.html
+++ b/game/templates/blog/blog.html
@@ -8,9 +8,7 @@
         <div class="box">
             <h2 style="font-size: 1em;">{{ post.title|safe }}</h2>
             <p>{{ post.created|date:'Y-m-d' }}</p>
-            <h3 style="font-size: 1em; font-weight: normal; line-height: 200%; text-align: justify">
-                {{ post.body|truncatewords_html:50|safe|linebreaks }}
-            </h3>
+            <p style="line-height: 200%; text-align: justify">{{ post.body|truncatewords_html:50|safe|linebreaks }}</p>
             <div class="vertical-center"><a href="{% url "post" post.slug %}">czytaj więcej</a></div>
         </div>
     {% endfor %}
