--- a/game/templates/join/join.html
+++ b/game/templates/join/join.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="logo">optyjaciel</h1>
+        <div class="vertical-center" style="margin: 36px 0 36px 0;"><span class="logo">optyjaciel</span></div>
         <div class="content">
             {% block content %}{% endblock %}
         </div>
