--- a/game/templates/rules.html
+++ b/game/templates/rules.html
@@ -48,12 +48,12 @@
 
     <div class="box high-line">
         <h2 class="qa">Jakie jest prawdopodobieństwo uzyskania 10 punktów?</h2>
-        <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1 do 4.</p>
+        <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1 do 2.</p>
 
-        <p>W przypadku dwóch pytań, prawdopobieństwo odpowiedzi na obydwa tak samo wynosi 1 do 16.</p>
+        <p>W przypadku dwóch pytań, prawdopobieństwo odpowiedzi na obydwa tak samo wynosi 1 do 4.</p>
 
-        <p>Natomiast prawdopodobieństwo, że dwie osoby odpowiedziały tak samo na wszystkie 10 pytań wynosi 1 do 1 048 576
-            (mniej niż jeden na milion!).</p>
+        <p>Natomiast prawdopodobieństwo, że dwie osoby odpowiedziały tak samo na wszystkie 10 pytań wynosi 1 do 1024
+            (mniej niż jeden na tysiąc!).</p>
     </div>
 
 {% endblock %}
