--- a/game/static/css/base.css
+++ b/game/static/css/base.css
@@ -1,6 +1,6 @@
 /*
-    orange: rgba(245, 180, 76, 1);
-    blue: #003c61; rgba(0, 60, 97, 1);
+    orange: #F5B44C; rgba(245, 180, 76, 1);
+    blue:   #003c61; rgba(0, 60, 97, 1);
 */
 
 * { box-sizing: border-box; }
