--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="przyjaciel, przyjaciółka, przyjaciele, przyjaźń,
     kolega, koleżanka, koledzy, koleżanki, znajomy, znajoma, znajomi, poznawanie nowych osób, poznawanie nowych ludzi,
     gra, gra towarzyska, zabawa, portal społecznościowy">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu">
