--- a/account/templates/registration/password_reset_confirm.html
+++ b/account/templates/registration/password_reset_confirm.html
@@ -6,10 +6,19 @@
 
     {% if validlink %}
         <h1>Resetowanie hasła</h1>
-        <form action="." method="post">
+
+        {% if form.login.errors %}
+            {% for err in form.login.errors %}
+                {{ err|escape }}
+            {% endfor %}
+        {% endif %}
+
+        <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <p><input type="submit" value="Zmień hasło"></p>
+            <div class="vertical-center">
+                <input type="submit" value="Zmień hasło" class="button blue-button">
+            </div>
         </form>
     {% else %}
         <p>Link jest nieprawidłowy. Proszę spróbuj ponownie.</p>
