--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -30,7 +30,9 @@
             </div>
         </div>
 
-        <div class="vertical-center" style="margin: 36px 0 36px 0;"><span class="logo">optyjaciel</span></div>
+        <div class="vertical-center" style="margin: 36px 0 36px 0;">
+            <span class="logo">optyjaciel</span>
+        </div>
 
         <div class="container">
             <div class="menu">
