--- a/account/templates/registration/password_reset_done.html
+++ b/account/templates/registration/password_reset_done.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <h1>Resetowanie hasła</h1>
-    <p>Wysłaliśmy do Ciebie e-maila do zresetowania hasła.</p>
+    <p>Wysłaliśmy do Ciebie e-maila z linkiem do zresetowania hasła.</p>
     <p>Jeżeli nic nie otrzymałeś, upewnij się, że podałeś ten sam adres e-mail co przy rejestracji.</p>
     <p><a href="{% url "account:login" %}" class="blue-link">Wróć do strony logowania.</a></p>
 
