--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="vertical-center" style="margin: 36px 0 36px 0;">
-            <span class="logo">optyjaciel</span>
+            <a href="{% url "rules" %}"><span class="logo">optyjaciel</span></a>
         </div>
 
         <div class="container">
