--- a/game/templates/game_match.html
+++ b/game/templates/game_match.html
@@ -13,6 +13,6 @@
     </div>
     <br>
     <div class="vertical-center">
-        {% include "single_match.html" %}
+        {% include "match.html" %}
     </div>
 {% endblock %}
