--- a/game/templates/matches.html
+++ b/game/templates/matches.html
@@ -11,7 +11,7 @@
     <div class="information"><h2>Twoi optyjaciele z poprzednich rund</h2></div>
     <div class="previous-matches">
         {% for match in matches %}
-            {% include "single_match.html" %}
+            {% include "match.html" %}
         {% empty %}
             <div style="text-align: center; width: 100%;">
                 <span style="font-size: 1.5em;">Jeszcze nie masz żadnych optyjaciół.<br>
