--- a/game/templates/message/message_inbox.html
+++ b/game/templates/message/message_inbox.html
@@ -24,7 +24,7 @@
         <div class="table">
             {% for message in messages_in %}
                 <a class="table-row {% if message.new %} new-msg {% endif %}" href="{% url "message-read" message.id %}">
-                    <div class="table-cell">{{ message.from_user.username }}</div>
+                    <div class="table-cell">{{ match.matched_user.get_username }}</div>
                     <div class="table-cell">{{ message.title }}</div>
                     <div class="table-cell">{{ message.sent_at }}</div>
                 </a>
