--- a/game/static/css/base.css
+++ b/game/static/css/base.css
@@ -19,20 +19,7 @@ body {
     overflow-y : scroll;
 }
 
-/* wrapper and push are used to make footer sticky */
-.wrapper {
-    min-height: 100%;
-    margin-bottom: -48px;
-}
-
-.footer, .push {
-    height: 48px;
-}
-
-.footer {
-    background-color: #d5d6da;
-}
-
+/* structure */
 .top-bar {
     background-color: #003c61;
     color: #fff;
@@ -47,6 +34,10 @@ body {
     padding-right: 24px;
 }
 
+.top-bar a:hover {
+    color: #F5B44C;
+}
+
 .logo {
     font-family: "Cookie", serif;
     font-size: 5em;
@@ -58,7 +49,6 @@ body {
     color: #003c61;
 }
 
-/* Container embraces menu and content */
 .container {
     min-height: 100%;
     max-width: 1560px;
@@ -109,6 +99,20 @@ body {
     border-top: 2px solid rgba(245, 180,76, 1);
 }
 
+/* footer */
+.wrapper {
+    min-height: 100%;
+    margin-bottom: -48px;
+}
+
+.footer, .push {
+    height: 48px;
+}
+
+.footer {
+    background-color: #d5d6da;
+}
+
 /* Used for text-based content inside of content*/
 .box {
     background-color: #fff;
@@ -135,6 +139,47 @@ body {
     background-color: rgba(245, 180, 76, 1);
 }
 
+/* buttons */
+.button {
+    background-color: #fff;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 8px;
+    margin: 20px 4px 2px 4px;
+    display: inline-block;
+    border: 2px solid;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
+.green-button {
+    border-color: rgba(11, 102, 35, 0.75);
+    color: rgba(11, 102, 35, 0.75);
+}
+
+.green-button:hover {
+    background-color: rgba(11, 102, 35, 0.2);
+}
+
+.red-button {
+    border-color: rgba(220, 53, 69, 0.75);
+    color: rgba(220, 53, 69, 0.75);
+}
+
+.red-button:hover {
+    background-color: rgba(220, 53, 69, 0.2);
+}
+
+.gray-button {
+    border-color: rgba(66, 66, 66, 0.75);
+    color: rgba(66, 66, 66, 0.75);
+}
+
+.gray-button:hover {
+    background-color: rgba(66, 66, 66, 0.2);
+}
+
+/* utils */
 .vertical-center {
     display: flex;
     justify-content: center;
