--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -23,7 +23,7 @@
         <div class="top-bar">
             <div class="top-bar-container">
                 {% if request.user.username %}
-                    <strong>{{ request.user.username }}</strong> | <a href="{% url "account:logout" %}">wyloguj się</a>
+                <strong><a href="{% url "profile" %}">{{ request.user.username }}</a></strong> | <a href="{% url "account:logout" %}">wyloguj się</a>
                 {% else %}
                     <a href="{% url "account:login" %}">zaloguj się</a>
                 {% endif %}
