--- a/game/templates/match.html
+++ b/game/templates/match.html
@@ -1,7 +1,10 @@
 <div class="card">
     {% if match.exists %}
     <div class="top">{{ match.quiz.year }}_{{ match.quiz.week }}</div>
-    <div class="middle"><span style="font-size: 2em;"><strong>{{ match.matched_user.username }}</strong></span></div>
+    <div class="middle"><span style="font-size: 2em;"><strong>
+        {{ match.matched_user.get_username }}
+    </strong></span></div>
+
     <div class="down">
         <div style="margin-bottom: 24px;">
             <span style="font-size: 1.4em;"><strong>{{ match.score }}</strong></span><br>
@@ -10,7 +13,7 @@
         <a href="{% url "compatibility" match.quiz.id match.user.id match.matched_user.id %}" class="blue-button">
             kompatybilność
         </a>
-        {% if previous_game %}
+        {% if previous_game and match.matched_user.is_active %}
         <a href="{% url "message-write" match.matched_user.id %}" class="blue-button">
             wiadomość
         </a>
