--- a/game/templates/message/message_outbox.html
+++ b/game/templates/message/message_outbox.html
@@ -24,7 +24,7 @@
         <div class="table">
             {% for message in messages_out %}
                 <a class="table-row" href="{% url "message-read" message.id %}">
-                    <div class="table-cell">{{ message.to_user.username }}</div>
+                    <div class="table-cell">{{ message.to_user.get_username }}</div>
                     <div class="table-cell">{{ message.title }}</div>
                     <div class="table-cell">{{ message.sent_at }}</div>
                 </a>
