--- a/game/templates/game/profile.html
+++ b/game/templates/game/profile.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}optyjaciel | twój profil{% endblock %}
+
 {%  block content %}
     <div class="box">
         <div class="vertical-center"><h1>Profil</h1></div>
